# yanu

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs  justfile
.github/workflows/: docker.yaml
assets/aarch64-linux/: 4nxci  hac2l  hacpack  hactool
assets/x86_64-linux/: 4nxci
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: defines.rs  error.rs  filename.rs  format.rs  lib.rs  log.rs  termux.rs  utils.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/hac/: Cargo.toml
crates/hac/src/: backend.rs  lib.rs  patch.rs
crates/hac/src/utils/: mod.rs  pack.rs  repack.rs  unpack.rs  update.rs
crates/hac/src/vfs/: mod.rs  nacp.rs  nca.rs  nsp.rs  ticket.rs  xci.rs
crates/yanu/: Cargo.toml  build.rs
crates/yanu-cli/: Cargo.toml
crates/yanu-cli/src/: lib.rs  main.rs  opts.rs  utils.rs
crates/yanu/src/: app.rs  lib.rs  main.rs  utils.rs
crates/yanu/src/gui/: app.rs  mod.rs
libyanu-common/: Cargo.toml
libyanu-common/src/: cache.rs  config.rs  defines.rs  lib.rs  termux.rs  utils.rs
libyanu-common/src/hac/: backend.rs  mod.rs  patch.rs  rom.rs  ticket.rs
resources/: app.exe.manifest  manifest.rc
resources/scripts/: yanu-bootstrap-termux.sh  yanu-bootstrap-termux_proot.sh
resources/x86_64-linux/: hacpack  hactool
scripts/: yanu-bootstrap-termux.sh
src/: cache.rs  config.rs  defines.rs  lib.rs  main.rs  termux.rs  utils.rs
src/cli/: args.rs  interact.rs  mod.rs
src/hac/: backend.rs  mod.rs  patch.rs  rom.rs  ticket.rs
yanu-cli/: Cargo.toml
yanu-cli/src/: main.rs  opts.rs
