[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.68"
version = "0.8.1"

[profile.dev]
opt-level = 1 # Make debug builds run faster

[profile.release]
strip = true
opt-level = "s"
lto = "thin"

[workspace.dependencies]
# local crates
cache = { path = "crates/cache" }
common = { path = "crates/common" }
config = { path = "crates/config" }
hac = { path = "crates/hac" }

# non-local crates
color-eyre = "0.6.2"
eyre = "0.6"
fs-err = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
tilde-expand = "0.1.1"
walkdir = "2.3"
bytesize = "1.2"
derivative = "2.2"
sysinfo = "0.28"
