[package]
name = "libyanu-common"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# ! Intended only for a aarch64-linux target in termux
android-proot = []

[dependencies]
color-eyre = { workspace = true }
confy = { version = "0.5", default-features = false, features = ["ron_conf"] }
dirs = "5.0"
eyre = { workspace = true }
fs-err = { workspace = true }
hex = "0.4"
once_cell = "1.17"
serde = { workspace = true }
strum = "0.24"
strum_macros = "0.24"
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
