[package]
name = "yanu-cli"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# ! Intended only for a aarch64-linux target in termux
android-proot = ["libyanu-common/android-proot"]

[dependencies]
clap = { version = "4.1", features = ["derive"] }
color-eyre = { workspace = true }
console = "0.15"
ctrlc = { version = "3.2", features = ["termination"] }
eyre = { workspace = true }
fs-err = { workspace = true }
indicatif = "0.17"
inquire = "0.6"
libyanu-common = { path = "../libyanu-common" }
owo-colors = "3.5"
serde = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(unix)'.dependencies]
tilde-expand = { workspace = true }
