[package]
name = "cache"
version = "0.0.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local crates
common = { path = "../common" }

# non-local crates
eyre.workspace = true
fs-err.workspace = true
tracing.workspace = true
walkdir.workspace = true
