[package]
name = "common"
version = "0.0.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# ! Intended only for the aarch64-linux target in termux
android-proot = []

[dependencies]
dirs = "5.0"
eyre.workspace = true
fs-err.workspace = true
once_cell = "1.17"
tracing.workspace = true
bytesize.workspace = true
sysinfo.workspace = true
