[package]
name = "config"
version = "0.0.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# ! Intended only for the aarch64-linux target in termux
android-proot = []

[dependencies]
# local crates
common.workspace = true

# non-local crates
confy = { version = "0.5", default-features = false, features = ["ron_conf"] }
eyre.workspace = true
fs-err.workspace = true
serde.workspace = true
tracing.workspace = true
