[package]
name = "hac"
version = "0.0.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# ! Intended only for the aarch64-linux target in termux
android-proot = []

[dependencies]
# local crates
cache.workspace = true
common.workspace = true
config.workspace = true

# non-local crates
eyre.workspace = true
fs-err.workspace = true
hex = "0.4"
strum = "0.24"
strum_macros = "0.24"
once_cell = "1.17"
tempfile.workspace = true
tracing.workspace = true
walkdir.workspace = true
