[package]
name = "yanu-cli"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# ! Intended only for the aarch64-linux target in termux
android-proot = [
    "common/android-proot",
    "config/android-proot",
    "hac/android-proot",
]

[dependencies]
# local crates
common.workspace = true
config.workspace = true
hac.workspace = true

# non-local crates
clap = { version = "4.1", features = ["derive"] }
color-eyre.workspace = true
console.workspace = true
ctrlc.workspace = true
eyre.workspace = true
fs-err.workspace = true
indicatif = "0.17"
inquire = "0.6"
serde.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
bytesize.workspace = true

[target.'cfg(unix)'.dependencies]
tilde-expand.workspace = true
