[package]
name = "yanu"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local crates
common.workspace = true
config.workspace = true
hac.workspace = true

# non-local crates
color-eyre.workspace = true
dirs = "5.0"
eyre = { workspace = true }
fs-err = { workspace = true }
#* Switch to main branch once zenity is merged
rfd = { git = "https://github.com/PolyMeilex/rfd.git", rev = "52d1010b09a957d3f1e40931f154805e5e1e57a6", default_features = false, features = [
    "xdg-portal",
] }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
bytesize.workspace = true

egui = "0.21.0"
eframe = "0.21.3"
egui-modal = "0.2.2"

[target.'cfg(unix)'.dependencies]
tilde-expand = { workspace = true }

[build-dependencies]
embed-resource = "2.1"
